@@ -13,6 +13,7 @@
 - FIX #2045 Prevent overwriting params by given query (@namusyaka)
 - NEW #2050 Update Moneta to 0.8.0 (@basex)
 - FIX #2052 String#humanize compatibility with AS ~3.2
+- NEW #2056 Allow Pry as Padrino console shell
 
 == 0.13.2 (May 9th 2016)
 
